fix: incorrect background and overflow

--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,10 @@
     padding: 0;
 }
 
-/* html,
-body
-{
+html {
+    background-color: black;
     overflow: hidden;
-} */
+}
 
 .webgl
 {
